mesg: new --verbose option
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/mesg.1
+++ b/term-utils/mesg.1
@@ -71,6 +71,9 @@ Permits messages to be displayed.
 .TP
 Available options:
 .TP
+.B \-v, \-\-verbose
+Explain what is being done.
+.TP
 .B \-V, \-\-verbose
 Output version information and exit.
 .TP
