wall: support --timeout switch (vol 2.)
This is the rest of the commit

	cae7485e59299c4b70ea7e1c7a4206df416701dc

the original patch was committed without man page and Makefile
changes. Sorry.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/term-utils/wall.1
+++ b/term-utils/wall.1
@@ -42,6 +42,7 @@
 .Sh SYNOPSIS
 .Nm wall
 .Op Ar -n
+.Op Ar -t TIMEOUT
 .Op Ar file
 .Sh DESCRIPTION
 .Nm Wall
@@ -64,6 +65,10 @@ and the program is suid or sgid.
 .Bl -tag -width Fl
 .It Fl n, Fl Fl nobanner
 Supress banner
+.It Fl t, Fl Fl timeout Ar TIMEOUT
+Write timeout to terminals in seconds. Argument must be positive
+integer. Default value is 300 seconds, which is a legacy from
+time when people ran terminals over modem lines.
 .It Fl V, Fl Fl version
 Output version and exit.
 .It Fl h, Fl Fl help
