docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -88,6 +88,7 @@ CONTRIBUTORS:
       Daniel Drake <dsd@laptop.org>
       Daniel Mierswa <impulze@impulze.org>
       Daniel Nylander <po@danielnylander.se>
+      Dave Reisner <d@falconindy.com>
       David Brownell <david-b@pacbell.net>
       Davidlohr Bueso <dave@gnu.org>
       David Miller <davem@davemloft.net>
@@ -126,6 +127,7 @@ CONTRIBUTORS:
       Jakob Unterwurzacher <jakobunt@gmail.com>
       Jakub Bogusz <qboosh@pld-linux.org>
       James Youngman <jay@gnu.org>
+      Jan Engelhardt <jengelh@medozas.de>
       Jan Kara <jack@suse.cz>
       Jan Sarenik <jsarenik@redhat.com>
       Jason Borden <jborden@bluehost.com>
@@ -189,6 +191,7 @@ CONTRIBUTORS:
       Milan Broz <mbroz@redhat.com>
       Moritz Muehlenhoff <jmm@inutil.org>
       M.S.Colclough <m.s.colclough@bham.ac.uk>
+      Nick Holloway <Nick.Holloway@pyrites.org.uk>
       Nicolas Provost <nprovost@quadriv.com>
       Nilgün Belma Bugüner <nilgun@buguner.name.tr>
       Norbert Buchmuller <norbi@nix.hu>
@@ -212,6 +215,7 @@ CONTRIBUTORS:
       Phan Vinh Thinh <teppi82@gmail.com>
       Phillip Susi <psusi@cfl.rr.com>
       Pierre Hauweele <antegallya@gmail.com>
+      Po-Yu Chuang <ratbert@faraday-tech.com>
       Rajeev V. Pillai <rajeevvp@gmail.com>
       Ram Pai <linuxram@us.ibm.com>
       Randy Dunlap <randy.dunlap@oracle.com>
@@ -227,6 +231,7 @@ CONTRIBUTORS:
       Sascha Sommer <ssommer@suse.de>
       Scott James Remnant <scott@ubuntu.com>
       Sebastian Andrzej Siewior <sebastian@breakpoint.cc>
+      Sergey Gusarov <laborer2008@gmail.com>
       Shachar Shemesh <shachar@debian.org>
       Simon Mihevc <simonmihevc@email.si>
       Stefan Krah <stefan@bytereef.org>
