docs: agetty manual update
Tell users how to see what issue escape will print by using other
commands, such as uname.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/agetty.8
+++ b/term-utils/agetty.8
@@ -218,25 +218,25 @@ d
 Insert the current date.
 .TP
 s
-Insert the system name, the name of the operating system.
+Insert the system name, the name of the operating system. Same as `uname -s'.
 .TP
 l
 Insert the name of the current tty line.
 .TP
 m
-Insert the architecture identifier of the machine, eg. i486
+Insert the architecture identifier of the machine. Same as `uname -m'.
 .TP
 n
-Insert the nodename of the machine, also known as the hostname.
+Insert the nodename of the machine, also known as the hostname. Same as `uname -n'.
 .TP
 o
-Insert the NIS domainname of the machine.
+Insert the NIS domainname of the machine. Same as `hostname -d'.
 .TP
 O
 Insert the DNS domainname of the machine.
 .TP
 r
-Insert the release number of the OS, eg. 1.1.9.
+Insert the release number of the OS. Same as `uname -r'.
 .TP
 t
 Insert the current time.
