docs: add Matej to AUTHORS
The original idea to have something like fallocate(1) is from Matej
Cepl -- his mkfile(1) prototype has been originally discussed on
coreutil mailing list. Thanks!

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ AUTHORS (merged projects & commands):
 
       fallocate:       Eric Sandeen <sandeen@redhat.com>
                        Karel Zak <kzak@redhat.com>
+                       Matěj Cepl <mcepl@redhat.com>
       findmnt:         Karel Zak <kzak@redhat.com>
       flock:           H. Peter Anvin <hpa@zytor.com>
       fstrim:          Lukas Czerner <lczerner@redhat.com>
