chrt: allow to use --all-tasks when retrieve info
master thread:
 $ chrt --pid $(pidof firefox)

all threads:
 $ chrt --all-tasks --pid $(pidof firefox)

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/schedutils/chrt.1
+++ b/schedutils/chrt.1
@@ -66,7 +66,8 @@ since Linux 2.6.31.
 operate on an existing PID and do not launch a new task
 .TP
 .B -a, --all-tasks
-propagate changes to all the tasks (threads) for a given PID.
+set or retrieve the scheduling attributes of the all tasks (threads) for a
+given PID.
 .TP
 .B -b, --batch
 set scheduling policy to
