--- a/schedutils/chrt.1
+++ b/schedutils/chrt.1
@@ -66,7 +66,7 @@ since Linux 2.6.31.
 operate on an existing PID and do not launch a new task
 .TP
 .B -a, --all-tasks
-set or retrieve the scheduling attributes of the all tasks (threads) for a
+set or retrieve the scheduling attributes of all the tasks (threads) for a
 given PID.
 .TP
 .B -b, --batch
