lsblk: add --pairs to output in key="value" format
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/lsblk.8
+++ b/misc-utils/lsblk.8
@@ -42,7 +42,7 @@ command.
 .IP "\fB\-h, \-\-help\fP"
 Print a help text and exit.
 .IP "\fB\-i, \-\-ascii\fP"
-Use ascii characters for tree formatting.
+Use ASCII characters for tree formatting.
 .IP "\fB\-m, \-\-perms\fP
 Output info about device owner, group and mode.  This option is equivalent to "-o NAME,SIZE,OWNER,GROUP,MODE".
 .IP "\fB\-l, \-\-list\fP"
@@ -53,6 +53,8 @@ Do not print a header line.
 Specify which output columns to print.  Use
 .B "--help"
 to get a list of all supported columns.
+.IP "\fB\-P, \-\-pairs\fP"
+Use key="value" output format.
 .IP "\fB\-r, \-\-raw\fP"
 Use the raw output format.
 .IP "\fB\-t, \-\-topology\fP"
