taskset: make threads aware
Add a new '-a' option to view/modify the CPU affinity for an entire
group of threads belonging to a given PID.  We create two new
functions, print_affinity() and do_taskset() for code simplification.

Example:

zeus@jilguero:~/src/util-linux/schedutils$ ./taskset -a -p 01 3142
pid 3142's current affinity mask: 2
pid 3142's new affinity mask: 1
pid 3164's current affinity mask: 2
pid 3164's new affinity mask: 1
pid 854's current affinity mask: 2
pid 854's new affinity mask: 1

[kzak@redhat.com: - clean up
                  - move variables to struct taskset]

Signed-off-by: Davidlohr Bueso <dave@gnu.org>
Tested-by: Jonathan Gonzalez <zeus@gnu.org>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/schedutils/taskset.1
+++ b/schedutils/taskset.1
@@ -72,6 +72,9 @@ returns, it is guaranteed that the given program has been scheduled to a legal
 CPU.
 .SH OPTIONS
 .TP
+.BR \-a ,\  \-\-all-tasks
+set or retrieve the CPU affinity of all the tasks (threads) for a given PID.
+.TP
 .BR \-p ,\  \-\-pid
 operate on an existing PID and not launch a new task
 .TP
