mount: remove note about obsolete volume_id library from man page
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -653,7 +653,7 @@ If no
 option is given, or if the
 .B auto
 type is specified, mount will try to guess the desired type.
-Mount uses the blkid or volume_id library for guessing the filesystem
+Mount uses the blkid library for guessing the filesystem
 type; if that does not turn up anything that looks familiar,
 mount will try to read the file
 .IR /etc/filesystems ,
