colrm: manual update
Inform about long, help & version and options.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/text-utils/colrm.1
+++ b/text-utils/colrm.1
@@ -51,6 +51,14 @@ If called with two parameters the columns from the first column
 to the last column will be removed.
 .Pp
 Column numbering starts with column 1.
+.Pp
+The options are as follows:
+.Bl -tag -width "-lnum"
+.It Fl V, Fl Fl version
+Output version information and exit.
+.It Fl H, Fl Fl help
+Output help and exit.
+.El
 .Sh SEE ALSO
 .Xr awk 1 ,
 .Xr column 1 ,
